# PixieToolbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Dependencies/: CMakeLists.txt
Source/: CMakeLists.txt
Source/PixieToolboxApplication/: CMakeLists.txt  PixieToolbox.cpp  PixieToolbox.h  main.cpp
Source/PixieToolboxApplication/UI/: SceneTreeWindow.cpp  SceneTreeWindow.h
Source/PixieToolboxCore/: CMakeLists.txt
Source/PixieToolboxCore/Math/: Bounds.h  MathBase.h  Transform.h
Source/PixieToolboxCore/Math/Noise/: PerlinNoise.cpp  PerlinNoise.h
Source/PixieToolboxCore/Mesh/: MeshGenerator.h
Source/PixieToolboxCore/Scene/: Camera.h  Component.cpp  Component.h  ComponentRegistry.h  FreeCameraController.cpp  FreeCameraController.h  OrbitalCameraController.cpp  OrbitalCameraController.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Source/PixieToolboxCore/Scene/Components/: MeshComponent.cpp  MeshComponent.h  SphereComponent.cpp  SphereComponent.h
Source/PixieToolboxCore/Texture/: TextureGenerator.cpp  TextureGenerator.h  TextureLoader.cpp  TextureLoader.h  TextureUtils.h
Source/PixieToolboxCore/Utils/: FileReader.cpp  ShaderPreprocessor.cpp  ShaderPreprocessor.h  StringUtils.cpp
dependencies/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glm/: CMakeLists.txt
dependencies/glslang/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/sdl/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
resources/shaders/: ErosionSimulationTerrainFragmentShader.glsl  ErosionSimulationTerrainVertexShader.glsl  ErosionSimulationWaterFragmentShader.glsl  ErosionSimulationWaterVertexShader.glsl  ExampleComputeShader.glsl  TextureViewerQuadFragmentShader.glsl  TextureViewerQuadVertexShader.glsl
source/: CMakeLists.txt
source/PixieToolbox/: CMakeLists.txt  PixieToolbox.cpp  PixieToolbox.h  main.cpp
source/PixieToolbox/UIElements/: DemoElement.cpp  DemoElement.h  TerrainErosionElement.cpp  TerrainErosionElement.h  TextureDisplayElement.cpp  TextureDisplayElement.h  TimeStatsElement.cpp  TimeStatsElement.h
source/PixieToolboxCore/: Application.h  CMakeLists.txt  Config.cpp  Config.h  PixieToolboxCore.cpp  PixieToolboxCore.h
source/PixieToolboxCore/Math/: Bounds.cpp  MathBase.h  Transform.cpp
source/PixieToolboxCore/Math/Noise/: PerlinNoise.cpp
source/PixieToolboxCore/Mesh/: Mesh.h  MeshGenerator.cpp  MeshGenerator.h
source/PixieToolboxCore/Modules/ErosionSimulation/: ErosionSimulator.h  ErosionSimulatorCPU.cpp  ErosionSimulatorCPU.h  ErosionSimulatorGPU.cpp  ErosionSimulatorGPU.h
source/PixieToolboxCore/Rendering/: RenderAPI.h  RenderEngine.cpp  RenderEngine.h  RendererBase.h  ResourceHandles.h  TextureEnums.cpp  TextureEnums.h
source/PixieToolboxCore/Rendering/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  MeshOpenGL.h  OpenGLCallbacks.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderCompilationOpenGL.cpp  ShaderCompilationOpenGL.h  ShaderStorageBufferOpenGL.h  TextureOpenGL.h  ViewportStateOpenGL.h
source/PixieToolboxCore/Rendering/Vulkan/: RendererVulkan.cpp  RendererVulkan.h  ShaderCompilationVulkan.cpp  ShaderCompilationVulkan.h
source/PixieToolboxCore/Scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  FreeCameraController.cpp  FreeCameraController.h  OrbitalCameraController.cpp  OrbitalCameraController.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
source/PixieToolboxCore/Scene/Components/: MeshComponent.cpp  MeshComponent.h  SphereComponent.cpp  SphereComponent.h
source/PixieToolboxCore/Texture/: Texture.h  TextureGenerator.cpp  TextureGenerator.h  TextureLoader.cpp  TextureLoader.h  TextureUtils.h
source/PixieToolboxCore/Time/: EngineTime.cpp  EngineTime.h  GlobalTimer.cpp  GlobalTimer.h  TimeMeasurement.h  Timer.cpp  Timer.h
source/PixieToolboxCore/UserInput/: UserInput.cpp  UserInput.h
source/PixieToolboxCore/Utils/: FileReader.h  Log.h  ShaderLoader.cpp  ShaderLoader.h  ShaderPreprocessor.cpp  ShaderPreprocessor.h  StringUtils.cpp  StringUtils.h
source/PixieToolboxCore/Window/: MainWindow.cpp  MainWindow.h  MainWindowOpenGL.cpp  MainWindowOpenGL.h  MainWindowVulkan.cpp  MainWindowVulkan.h  UIElement.h  WindowUI.cpp  WindowUI.h  WindowUIOpenGL.cpp  WindowUIOpenGL.h  WindowUIVulkan.cpp  WindowUIVulkan.h
